# EchoStream

./: .dockerignore  .env.template  .gitignore  Dockerfile  README.md  docker-compose.yml  pyproject.toml
airflow/: Dockerfile
dags/: echostream_pipeline.py
scripts/: check_spotify.py  run_extractor.py
src/: __init__.py
src/echostream/: __init__.py  main.py
src/echostream/bronze/: __init__.py  loader.py  schemas.py
src/echostream/spotify/: __init__.py  client.py  config.py  extractor.py
terraform/: backend.tf  cloud_run.tf  outputs.tf  providers.tf  storage.tf  variables.tf
tests/: test_bronze_loader.py  test_extractor.py  test_spotify_client.py
